--- a/source/Xenia-dashboard/layouts/NXE-2008/game-library.html
+++ b/source/Xenia-dashboard/layouts/NXE-2008/game-library.html
@@ -38,11 +38,12 @@
                 <div class="nxe-blade-gloss"></div>
                 <div class="nxe-blade-content">
                 
-                    <div class="nxe-blade-cover-art" 
-                        :style="`background-image: url('${game.coverUrl || 'assets/icons/placeholder.png'}')`">
+                    <div class="nxe-blade-cover-art">
+                        <div class="game-art-fill" 
+                            :style="`background-image: url('${game.coverUrl || 'assets/icons/placeholder.png'}')` ">
+                        </div>
+                        <img src="assets/images/cover-game.webp" class="cover-frame-img">
                     </div>
-                    
-                    
 
                     <div class="library-status-bar" 
                          :class="{
