--- a/source/Xenia-dashboard/themes/NXE-2008/style.css
+++ b/source/Xenia-dashboard/themes/NXE-2008/style.css
@@ -260,16 +260,38 @@ body::before { content: ''; position: fixed; top: 0; left: 0; width: 100%; heigh
 
 .nxe-blade-cover-art {
     position: absolute;
-    top: 1.8%;
-    left: 1.3%;
-    width: 95.95%;
-    height: 95.95%;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    overflow: hidden;
+    border: none !important;
+    background-repeat: no-repeat;
+    background-position: center center;
+}
+
+.game-art-fill {
+    position: absolute;
+    top: 0.5%;
+    bottom: 0.7%;
+    left: 0.5%;
+    right: 6%;
     
     background-size: cover;
     background-position: center;
-    background-repeat: no-repeat;
     z-index: 1;
-    border-radius: 2px;
+}
+
+.cover-frame-img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 2;
+    pointer-events: none;
+    object-fit: fill;
 }
 
 .base-cover-image {
@@ -334,19 +356,6 @@ body::before { content: ''; position: fixed; top: 0; left: 0; width: 100%; heigh
     z-index: 1;
 }
 
-.nxe-blade-cover-art { 
-    width: 100%; 
-    height: 100%; 
-    
-    position: relative; 
-    overflow: hidden;
-
-    background-size: 95% 95%;
-    background-repeat: no-repeat;
-    background-position: center 50%;
-    border-radius: 0px; 
-    
-}
 .page#game-library .nxe-blade {
     width: 300px;
     height: 400px;
